--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # Node.js dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp/
 .pnp.js
 
 # testing
-/coverage
+coverage/
 
 # production
-/build
+build/
 
 # misc
 .DS_Store
